# legendre

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  codspeed.yml
benches/: core.rs  heat.rs
examples/: heat3d.rs  model_c.rs
scripts/: render_model_c.py  requirements.txt
src/: lib.rs
src/core/: driver.rs  mod.rs  observer.rs  scheduler.rs  scratch.rs  simulation.rs  state.rs  storage.rs
src/discretization/: finite_difference.rs  finite_volume.rs  mod.rs  operators.rs  stencil.rs
src/geometry/: cartesian.rs  grid.rs  mod.rs
src/geometry/amr/: adapt.rs  cluster.rs  grid.rs  intergrid.rs  mod.rs
src/integrators/: euler.rs  euler_maruyama.rs  mod.rs  rk4.rs  subcycling.rs
src/io/: mod.rs  parquet.rs  progress.rs
src/physics/: mod.rs  model.rs  phasefield.rs
src/util/: mod.rs  rng.rs
tests/: amr.rs  convergence.rs  framework.rs  heat.rs  heat3d.rs  model_c.rs  parquet.rs  periodic.rs
