[package]
name = "legendre"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
authors = ["Tristan Britt <hello@tbritt.xyz>"]
license = "MIT OR Apache-2.0"
description = "Block-structured, deterministic, scheduler-driven PDE simulation framework"
documentation = "https://docs.rs/legendre"
repository = "https://github.com/trbritt/legendre"
homepage = "https://github.com/trbritt/legendre"
readme = "README.md"
keywords = ["pde", "simulation", "phase-field", "stencil", "hpc"]
categories = ["science", "simulation", "mathematics", "concurrency"]
exclude = [".github/*", ".idea/*", "benches/*", "data/*"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[dependencies]
indicatif = { version = "0.17", default-features = false }
parking_lot = { version = "0.12.5", default-features = false, features = ["arc_lock", "hardware-lock-elision"] }
parquet = { version = "59.1.0", default-features = false, features = ["snap"] }
rayon = { version = "1.12.0", default-features = false, features = ["web_spin_lock"] }
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1.52.3", default-features = false, features = ["macros", "sync", "time", "rt-multi-thread"] }
tracing = { version = "0.1.44", features = ["async-await", "release_max_level_info"] }
pprof = { version = "0.13.0", features = ["flamegraph"], optional = true }

[dev-dependencies]
approx = { version = "0.5.1" }
clap = { version = "4.5", features = ["derive"] }
divan = { version = "5.0.1", package = "codspeed-divan-compat" }
tempfile = { version = "3.20" }

[features]
default = []
dev-profiling = ["pprof"]
jemalloc = ["tikv-jemallocator"]

[[example]]
name = "heat3d"
path = "examples/heat3d.rs"

[[example]]
name = "model_c"
path = "examples/model_c.rs"

[[bench]]
name = "heat"
harness = false

[lints.rust]
unsafe_code = "allow"
unused_imports = "deny"
unused_variables = "deny"
dead_code = "deny"
unreachable_code = "deny"
unused_must_use = "deny"
missing_docs = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Grid code converts constantly between usize indices, isize offsets, and f64
# coordinates; these casts are intrinsic to stencil arithmetic and reviewed at
# the call sites rather than annotated individually.
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
# Face-gradient kernels name their eight directional derivatives derx_r,
# derx_l, dery_r, ... after the mathematical notation; the similarity is the
# point.
similar_names = "allow"
# Hot-path index arithmetic (view get/set, linearize, RNG mixing) is
# deliberately `#[inline(always)]`: these are one-expression functions whose
# call overhead would dominate the work.
inline_always = "allow"
# Transitive duplicates (e.g. getrandom) owned by upstream crates.
multiple_crate_versions = "allow"

[profile.bench]
debug = true

[profile.maxperf]
inherits = "release"
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
incremental = false
panic = "abort"
rpath = false
